--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -14,6 +14,7 @@ meta:
     title:  Meta
     login:  Login
     logout: Logout
+    admin:  Site Admin
     entries:
         feed:   Entries RSS
     comments:
